# PySpell

./: README.md  pyproject.toml
.virtual_documents/code/: Suite2p_exploreResults_multiPlane.ipynb
code/: ROI-z-plane.ipynb  matpy.py  nwbfun.py  plotters.py  rootfun.py  s2pfuns.py  statfuns.py  stringfun.py
code/.ipynb_checkpoints/: ROI-z-plane-checkpoint.ipynb
code/Projects/Archive/: nwbfun_old.py
code/Projects/Data Exploration/: Exploring_data.ipynb
code/Projects/L6 neurons/: Exploring_L5L6_MDT_Neurons.ipynb  SCRIPT_CT_convertToNWB.py
code/Projects/NWB/: Writing to NWB.ipynb  choiceOutcomeSetShiftingIDROI129_nwbwidgetresult  testing_nwb.ipynb
code/Projects/RawTifLowMem/: RAW to TIF Low Memory Conversion.ipynb
code/Projects/Visualization/: Suite2p_fastplotlib_quickViz.ipynb
code/Projects/plotters test/: peth_test.ipynb  rate_sorter_test.ipynb
code/Projects/pynapple/: tutorial_pynapple_nwb.ipynb  tutorial_pynapple_process.ipynb
code/Projects/trash/: Deep_layer_PFC_project.ipynb  SCRIPT_CT_old.py
code/suite2p_code/: Suite2p_quickRun.ipynb  run_suite2p.py
code/trash/: matpy.py  suite2p_nwb.py
code/trash/io/trash/: raw_to_tif - backup-3-27.py
code/trash/suite2p_code/: Suite2p_exploreResults.ipynb  multiple_functional_channels.ipynb
code/trash/suite2p_code/.ipynb_checkpoints/: multiplane_script-checkpoint.py  multiple_functional_channels-checkpoint.ipynb
code/trash/utils/trash/: raw_to_tif.py
code/utils/trash/: raw_to_tif - backup.py  raw_to_tif - latest backup.py  raw_to_tif_scrapmetal.py
tests/: test_converter.py
