[tool.poetry]
name = "spellpy"
version = "0.1.0"
description = "Python package for Tim Spellman lab"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
suite2p = "0.14.2"
openpyxl = "3.1.2"
pynwb  = "2.5.0"
pynapple = "0.4.0"
tensortools = "0.4.0"
h5py = "3.10.0"
scikit-image = "0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
